Checkboxes labels aren't aligned Fixes #4511

--- a/webviews/createPullRequestView/index.css
+++ b/webviews/createPullRequestView/index.css
@@ -107,6 +107,7 @@ body {
 .automerge-checkbox-label {
 	display: flex;
 	align-items: center;
+	margin-right: 0px;
 }
 
 .labels-list {
